--- a/styles/style.css
+++ b/styles/style.css
@@ -1101,8 +1101,7 @@ background-size: cover;
   align-content: center;
   background-color: var(--background-color-about);
   border-radius: 5rem;
-  margin-bottom: 2rem;
-  margin-top: 5rem;
+  margin: 1rem;
 }
 
 .about-item-2 {
@@ -1120,7 +1119,7 @@ background-size: cover;
   align-content: center;
   background: var(--background-color-about);
   border-radius: 5rem;
-  margin-bottom: 2rem;
+  margin: 1rem;
 }
 
 .footer-item-3 {
@@ -1130,7 +1129,7 @@ background-size: cover;
   align-content: center;
   background: var(--background-color-about);
   border-radius: 5rem;
-  margin-bottom: 1rem;
+  margin: 1rem;
 }
 
 .about-item-4 {
@@ -1587,7 +1586,6 @@ background-size: cover;
   .project-wrapper {
     padding: 2rem;
     background-color: white;
-
     border-radius: 5rem;
     align-items: center;
     justify-content: center;
@@ -1834,15 +1832,27 @@ background-size: cover;
     border-radius: 2rem;
   }
 
+  .global-footer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    min-height: 50vh;
+    max-height: 50vh;
+    background: var(--background-color-footer);
+    border-radius: 5rem;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+    align-items: stretch;
+  }
+
   .footer-item-1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
     padding: 3rem;
     align-content: center;
     background-color: var(--background-color-about);
-    border-radius: 10rem;
+    border-radius: 6rem;
+    margin: 2rem;
   }
-
   .about-item-2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
@@ -1852,12 +1862,11 @@ background-size: cover;
   }
 
   .footer-item-2 {
-    grid-row: 1 / 2;
-    grid-column: 2 / 3;
     padding: 3rem;
     align-content: center;
     background: var(--background-color-about);
-    border-radius: 10rem;
+    border-radius: 6rem;
+    margin: 2rem;
   }
 
   .footer-item-3 {
@@ -1866,7 +1875,8 @@ background-size: cover;
     padding: 3rem;
     align-content: center;
     background: var(--background-color-about);
-    border-radius: 10rem;
+    border-radius: 6rem;
+    margin: 2rem;
   }
 
   .about-item-4 {
@@ -1877,16 +1887,6 @@ background-size: cover;
     align-self: end;
     background-color: var(--background-color-about);
     border-radius: 5rem;
-  }
-
-  .footer-item-4 {
-    grid-row: 2 / 3;
-    grid-column: 1 / 4;
-    padding-top: 1rem;
-    align-content: center;
-    align-self: end;
-    background-color: var(--background-color-about);
-    border-radius: 8rem;
   }
 
   .footer-click {
