--- a/styles/style.css
+++ b/styles/style.css
@@ -990,7 +990,7 @@ background-size: cover;
 
   .work-title {
     font-size: 3rem;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
     font-weight: 200;
     color: var(--h2-color);
   }
@@ -1020,7 +1020,6 @@ background-size: cover;
 .portfolio,
 .project-wrapper {
   width: 100%;
-
   background-color: white;
   margin: 0, 2.5rem;
   border-radius: 2rem;
@@ -1240,7 +1239,7 @@ background-size: cover;
 }
 
 .arrow {
-  padding-right: 1rem;
+  padding: 0.5rem;
 }
 
 /*sections*/
@@ -1632,8 +1631,6 @@ background-size: cover;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     opacity: 0;
     transition: 1s ease-in-out;
     display: flex;
@@ -1742,7 +1739,7 @@ background-size: cover;
   }
 
   .arrow {
-    padding: 0;
+    padding: 2;
   }
 
   .project-image-container {
