--- a/styles/style.css
+++ b/styles/style.css
@@ -636,11 +636,9 @@ background-size: cover;
 }
 
 .about-item-2 {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
   background: var(--background-color-about);
   border-radius: 2rem;
-  padding: 2rem;
+  padding: 0.5rem;
 }
 
 .about-item-3 {
@@ -708,7 +706,6 @@ background-size: cover;
 .footer-item-4 {
   grid-column: 1 / 2;
   grid-row: 4 / 5;
-  margin-top: 2rem;
 }
 
 .footer-item-5 {
@@ -1092,11 +1089,11 @@ background-size: cover;
 /*about and footer*/
 
 .about {
-  display: grid;
-  grid-gap: 3rem;
+  display: flex;
   flex: 1;
-  align-items: stretch;
-  padding: 4rem;
+  flex-direction: column;
+  grid-gap: 3rem;
+  padding: 0rem;
   grid-template-columns: 1fr 1fr;
   border-radius: 15rem;
   margin: 2.5rem;
@@ -1135,11 +1132,9 @@ background-size: cover;
 }
 
 .about-item-2 {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
   background: var(--background-color-about);
   border-radius: 2rem;
-  padding: 6rem;
+  padding: 2rem;
 }
 
 .footer-item-2 {
@@ -1230,7 +1225,7 @@ background-size: cover;
 }
 
 .project-title {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   line-height: 1.2;
   font-family: var(--project-title-typeface);
   color: var(--project-title-color);
