--- a/styles/style.css
+++ b/styles/style.css
@@ -816,7 +816,7 @@ background-size: cover;
 */
 
 .holding-page {
-  background: url(../assets/branding-images/INDEXSHPLASHART.jpg);
+  background: /*url(../assets/branding-images/INDEXSHPLASHART.jpg);*/ white;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -861,7 +861,7 @@ background-size: cover;
 
 .holding-page-copyright {
   font-size: 0.8rem;
-  color: #d31919;
+  color: var(--accent-color);
   margin-bottom: 0;
 }
 
@@ -1171,7 +1171,7 @@ background-size: cover;
   align-items: center;
   padding-top: 1rem;
   align-content: center;
-  width: 100%;
+  width: 80%;
   background-color: var(--background-color-about);
   border-radius: 8rem;
 }
@@ -1420,6 +1420,7 @@ background-size: cover;
 
   .fineprint {
     font-size: 0.875rem;
+    text-align: center;
   }
 
   .hero-headline {
@@ -1838,11 +1839,11 @@ background-size: cover;
   }
 
   .about {
-    display: grid;
-    grid-gap: 3rem;
+    display: flex;
     flex: 1;
-    align-items: stretch;
-    padding: 4rem;
+    flex-direction: column;
+    grid-gap: 3rem;
+    padding: 3rem;
     grid-template-columns: 1fr 1fr;
     border-radius: 15rem;
     margin: 2.5rem;
@@ -1881,6 +1882,7 @@ background-size: cover;
     grid-column: 2 / 3;
     background: var(--background-color-about);
     border-radius: 2rem;
+    width: 80%;
     padding: 6rem;
   }
 
@@ -1907,6 +1909,7 @@ background-size: cover;
     grid-column: 1 / 4;
     padding: 2rem;
     text-align: center;
+    align-content: center;
     align-self: end;
     background-color: var(--background-color-about);
     border-radius: 5rem;
