--- a/styles/style.css
+++ b/styles/style.css
@@ -874,7 +874,9 @@ background-size: cover;
 */
 
 /* TODO: Customize your 404 Error Page */
-
+.error-page {
+  background-color: white;
+}
 /* The best 404 pages have become an art in themselves. Your 404 error page is an opportunity to make a memorable impression on your visitors when they don’t land exactly where they hoped. */
 
 /*
