--- a/styles/style.css
+++ b/styles/style.css
@@ -175,12 +175,12 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-family: var(--heading-typeface);
   font-weight: thin;
   margin-bottom: 1rem;
   color: var(--h2-color);
-  text-align: center;
+  text-align: left;
 }
 
 h3 {
@@ -635,7 +635,7 @@ background-size: cover;
 
 .about-item-2 {
   background: var(--background-color-about);
-  border-radius: 2rem;
+  border-radius: 5rem;
   padding: 0.5rem;
 }
 
@@ -679,7 +679,8 @@ background-size: cover;
   max-height: 50vh;
   background: var(--background-color-footer);
   background-color: white;
-  border-radius: 15rem;
+  border-top-left-radius: 10rem;
+  border-top-right-radius: 10rem;
 }
 
 .footer-item-1 {
@@ -1107,10 +1108,12 @@ background-size: cover;
   min-height: 50vh;
   max-height: 50vh;
   background: var(--background-color-footer);
-  border-radius: 5rem;
+  border-top-left-radius: 10rem;
+  border-top-right-radius: 10rem;
   width: 100%;
   align-items: center;
   align-content: center;
+  margin-top: 7rem;
 }
 
 .about-item-1 {
@@ -1125,12 +1128,7 @@ background-size: cover;
   grid-row: 1 / 3;
   padding: 3rem;
   align-content: center;
-  background-color: var(--background-color-about);
-  border-radius: 5rem;
-  margin-top: 3rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
+  flex-basis: 100%;
 }
 
 .about-item-2 {
@@ -1144,9 +1142,7 @@ background-size: cover;
   grid-column: 1 / 1;
   padding: 3rem;
   align-content: center;
-  background: var(--background-color-about);
-  border-radius: 5rem;
-  margin: 1rem;
+  flex-basis: 100%;
 }
 
 .footer-item-3 {
@@ -1154,9 +1150,7 @@ background-size: cover;
   grid-column: 3 / 4;
   padding: 3rem;
   align-content: center;
-  background: var(--background-color-about);
-  border-radius: 5rem;
-  margin: 1rem;
+  flex-basis: 100%;
 }
 
 .about-item-4 {
@@ -1698,7 +1692,7 @@ background-size: cover;
     grid-row: 2 / 3;
     background: var(--background-color-about);
     border-radius: 2rem;
-    padding: 2rem;
+    padding: 5rem;
   }
 
   .about-item-3 {
@@ -1804,7 +1798,7 @@ background-size: cover;
   }
 
   h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 300;
   }
 
@@ -1869,8 +1863,9 @@ background-size: cover;
     flex-direction: row;
     min-height: 50vh;
     max-height: 50vh;
-    background: var(--background-color-footer);
-    border-radius: 5rem;
+    background: white;
+    border-top-left-radius: 10rem;
+    border-top-right-radius: 10rem;
     width: 100%;
     align-items: center;
     align-content: center;
@@ -1878,37 +1873,34 @@ background-size: cover;
   }
 
   .footer-item-1 {
-    padding: 3rem;
+    padding-left: 9rem;
+    padding-right: 8rem;
     align-content: center;
-    background-color: var(--background-color-about);
-    border-radius: 6rem;
-    margin: 2rem;
+    text-align: left;
   }
   .about-item-2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     background: var(--background-color-about);
-    border-radius: 2rem;
+    border-radius: 5rem;
     width: 80%;
     padding: 6rem;
   }
 
   .footer-item-2 {
-    padding: 3rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
     align-content: center;
-    background: var(--background-color-about);
-    border-radius: 6rem;
-    margin: 2rem;
+    text-align: left;
   }
 
   .footer-item-3 {
     grid-row: 1 / 2;
     grid-column: 3 / 4;
-    padding: 3rem;
+    padding-right: 3rem;
+    padding-left: 8rem;
     align-content: center;
-    background: var(--background-color-about);
-    border-radius: 6rem;
-    margin: 2rem;
+    text-align: left;
   }
 
   .about-item-4 {
