--- a/styles/style.css
+++ b/styles/style.css
@@ -339,8 +339,7 @@ a:active {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   padding-left: 2rem;
-  padding-right: 2rem;
-  background-color: var(--background-color-about);
+  padding-right: 4rem;
   border-radius: 5rem;
 }
 
@@ -417,7 +416,7 @@ background-size: cover;
 .background-hero-image {
   background: url(../assets/branding-images/SELFPORTRAIT.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
 }
 
 .index-splashart {
@@ -445,9 +444,12 @@ background-size: cover;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  /*background-color: #f0f0c9;*/
-  margin: 2.5rem;
+  background-color: white;
   border-width: 2rem;
+  padding: 1rem;
+  border-bottom-left-radius: 10rem;
+  border-bottom-right-radius: 10rem;
+  margin-bottom: 5rem;
 }
 
 .logo {
@@ -929,6 +931,7 @@ background-size: cover;
   h2 {
     font-size: 2rem;
     font-weight: 300;
+    text-align: center;
   }
 
   h3 {
@@ -982,7 +985,6 @@ background-size: cover;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    background-color: var(--background-color-about);
     border-radius: 2rem;
   }
 
@@ -1017,6 +1019,17 @@ background-size: cover;
     color: var(--h2-color);
   }
   /*a*/
+
+  .holding-page-copyright {
+    font-size: 0.4rem;
+    color: var(--accent-color);
+    margin-bottom: 0;
+  }
+
+  .animatedlogo {
+    width: 20rem;
+    margin-top: 8rem;
+  }
 
   .logo {
     width: 3rem;
@@ -1082,6 +1095,18 @@ background-size: cover;
   height: 45vh;
 }
 
+.branding-navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  border-width: 2rem;
+  padding: 2rem;
+  border-bottom-left-radius: 4rem;
+  border-bottom-right-radius: 4rem;
+}
+
 /* Grayscale filter with full-colour on hover and tap */
 .work-page-grid-item a.grayscale img {
   filter: grayscale(100);
@@ -1108,15 +1133,13 @@ background-size: cover;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  min-height: 50vh;
-  max-height: 50vh;
-  background: var(--background-color-footer);
-  border-top-left-radius: 10rem;
-  border-top-right-radius: 10rem;
+  background-color: #2c51d7;
+  border-top-left-radius: 5rem;
+  border-top-right-radius: 5rem;
   width: 100%;
   align-items: center;
   align-content: center;
-  margin-top: 7rem;
+  margin-top: 5rem;
 }
 
 .about-item-1 {
@@ -1130,8 +1153,12 @@ background-size: cover;
   grid-column: 1 / 1;
   grid-row: 1 / 3;
   padding: 3rem;
+  text-align: center;
   align-content: center;
   flex-basis: 100%;
+  background-color: white;
+  margin: 2rem;
+  border-radius: 2.5rem;
 }
 
 .about-item-2 {
@@ -1146,14 +1173,22 @@ background-size: cover;
   padding: 3rem;
   align-content: center;
   flex-basis: 100%;
+  background-color: white;
+  margin: 2rem;
+  text-align: center;
+  border-radius: 2.5rem;
 }
 
 .footer-item-3 {
   grid-row: 1 / 2;
   grid-column: 3 / 4;
   padding: 3rem;
-  align-content: center;
+  text-align: center;
+  justify-content: center;
   flex-basis: 100%;
+  background-color: white;
+  margin: 2rem;
+  border-radius: 2.5rem;
 }
 
 .about-item-4 {
@@ -1446,9 +1481,8 @@ background-size: cover;
   .custom-navigation {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    background-color: var(--background-color-about);
+    padding-left: 5rem;
+    padding-right: 5rem;
     border-radius: 5rem;
   }
 
@@ -1531,9 +1565,10 @@ background-size: cover;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /*background-color: #f0f0c9;*/
-    margin: 2.5rem;
+    background-color: white;
     border-width: 2rem;
+    border-bottom-left-radius: 10rem;
+    border-bottom-right-radius: 10rem;
   }
 
   .logo {
@@ -1880,6 +1915,8 @@ background-size: cover;
     padding-right: 8rem;
     align-content: center;
     text-align: left;
+    background-color: white;
+    border-radius: 5rem;
   }
   .about-item-2 {
     grid-row: 1 / 2;
@@ -1895,6 +1932,8 @@ background-size: cover;
     padding-right: 0rem;
     align-content: center;
     text-align: left;
+    background-color: white;
+    border-radius: 5rem;
   }
 
   .footer-item-3 {
@@ -1904,6 +1943,8 @@ background-size: cover;
     padding-left: 8rem;
     align-content: center;
     text-align: left;
+    background-color: white;
+    border-radius: 5rem;
   }
 
   .about-item-4 {
